i18n update from Transifex

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_cs.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_cs.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = 
+# atd = Automatically detect language
 
-ast = 
+# ast = Asturian
 
 be = B\u011blorusky
 
-br = 
+# br = Breton
 
 ca = Katal\u00e1nsky
 
@@ -41,13 +41,13 @@ desc_repetition = Opakov\u00e1n\u00ed slov (nap\u0159. 'bude bude')
 
 desc_repetition_short = Opakov\u00e1n\u00ed slov
 
-desc_repetition_beginning = 
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_repetition_beginning_word = 
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_repetition_beginning_adv = 
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_repetition_beginning_thesaurus = 
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
 desc_unpaired_brackets = Nesp\u00e1rovan\u00e9 z\u00e1vorky, uvozovky nebo  podobn\u00e9 symboly
 
@@ -85,11 +85,11 @@ fr = Francouzsky
 
 gl = Galicij\u0161tinsky
 
-guiAddButton=
+# guiAddButton=Add...
 guiCancelButton = Storno
 
 guiCheckComplete = LanguageTool kontrola byla ukon\u010dena
-guiCloseButton=
+# guiCloseButton=Close
 
 guiConfigWindowTitle = LanguageTool nastaven\u00ed
 
@@ -116,7 +116,7 @@ guiMenuOptions = Nastaven\u00ed...
 
 guiMenuQuit = Konec
 
-guiMenuShowMainWindow = 
+# guiMenuShowMainWindow = Open Main Window
 
 guiMotherTongue = V\u00e1\u0161 mate\u0159sk\u00fd jazyk\:
 
@@ -124,7 +124,7 @@ guiNoErrorsFound = \u017d\u00e1dn\u00e9 chyby ani varov\u00e1n\u00ed nebyly nale
 
 guiNoErrorsFoundSelectedText = \u017d\u00e1dn\u00e9 chyby ani varov\u00e1n\u00ed nebyly vo vyzna\u010den\u00e9m textu nalezeny (jazyk\: {0})
 
-guiOKButton = 
+# guiOKButton = &OK
 
 guiOOoChangeButton = Zam\u011bnit
 
@@ -138,7 +138,7 @@ guiOOoOptionsButton = Nastaven\u00ed...
 
 guiProgressWindowTitle = LanguageTool\: Kontrola textu...
 
-guiRemoveButton=
+# guiRemoveButton=Remove
 guiReplaceWindowTitle = Zam\u011bnit text
 
 guiReplaceWithOtherText = <jin\u00fd text>
@@ -147,7 +147,7 @@ guiRunOnPort = Pob\u011b\u017e\u00ed jako server na portu
 
 guiSelectionCheckComplete = LanguageTool kontrola ozna\u010den\u00e9ho textu je ukon\u010dena.
 
-guiTagText = 
+# guiTagText = &Tag Text
 
 incorrect_case = Tato v\u011bta neza\u010d\u00edn\u00e1 z velk\u00fdm p\u00edsmenem
 
@@ -209,5 +209,4 @@ whitespace_repetition = Mo\u017en\u00fd p\u0159eklep\: zopakovali jste mezeru
 
 ro = Rumunsky
 
-zh = 
-
+# zh = Chinese
