--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
@@ -41,13 +41,13 @@ desc_repetition = Ordgentagelse (f.eks. 'den den')
 
 desc_repetition_short = Ordgentagelse
 
-desc_repetition_beginning = 
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_repetition_beginning_word = 
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_repetition_beginning_adv = 
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_repetition_beginning_thesaurus = 
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
 desc_unpaired_brackets = Ikke parret parenteser, tuborgklammer, citationstegn og lignende symboler
 
@@ -147,7 +147,7 @@ guiRunOnPort = K\u00f8r som service p\u00e5 po&rt
 
 guiSelectionCheckComplete = LanguageTools kontrol af markerede tekst er f\u00e6rdig.
 
-guiTagText = 
+# guiTagText = &Tag Text
 
 incorrect_case = Denne s\u00e6tning starter ikke med et stort begyndelsesbogstav
 
@@ -210,4 +210,3 @@ whitespace_repetition = Mulig sl\u00e5fejl\: du har gentaget et mellemrum
 ro = Rum\u00e6nsk
 
 zh = Kinesisk
-
