--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
@@ -35,7 +35,7 @@ de = Deutsch
 
 desc_comma_whitespace = Leerzeichen vor/hinter Kommas und Klammern
 
-desc_double_punct = Zwei aufeinanderfolgende Kommas oder Punkte
+desc_double_punct = Zwei aufeinander folgende Kommas oder Punkte
 
 desc_repetition = Wortwiederholung (z.B. 'als als')
 
@@ -43,9 +43,9 @@ desc_repetition_short = Wortwiederholung
 
 desc_repetition_beginning = Aufeinanderfolgende S\u00e4tze beginnen mit dem gleichen Wort
 
-desc_repetition_beginning_word = Drei aufeinanderfolgende S\u00e4tze beginnen mit demselben Wort.
+desc_repetition_beginning_word = Drei aufeinanderfolgende S\u00e4tze beginnen mit dem gleichen Wort.
 
-desc_repetition_beginning_adv = Zwei aufeinanderfolgende S\u00e4tze beginnen mit demselben Adverb.
+desc_repetition_beginning_adv = Zwei aufeinanderfolgende S\u00e4tze beginnen mit dem gleichen Adverb.
 
 desc_repetition_beginning_thesaurus = Formulieren Sie den Satz um oder nutzen Sie ein Synonym.
 
@@ -55,9 +55,9 @@ desc_uppercase_sentence = Gro\u00dfschreibung am Satzanfang
 
 desc_whitespacerepetition = Wiederholung von Leerzeichen
 
-double_dots_short = Zwei aufeinanderfolgende Punkte
+double_dots_short = Zwei aufeinander folgende Punkte
 
-double_commas_short = Zwei aufeinanderfolgende Kommas
+double_commas_short = Zwei aufeinander folgende Kommas
 
 en = Englisch
 
@@ -93,7 +93,7 @@ guiCloseButton=Schlie\u00dfen
 
 guiConfigWindowTitle = LanguageTool Optionen
 
-guiDemoText = Wir haben es bereits schon eine Millionen Mal mit schlechtem gewissen getan, obwohl es in vielen f\u00E4llen rechtlich legal war. Es war freilich ein sehr schmaler Grad, auf dem wir uns da Kreuz und quer bewegten, deswegen machten wir uns sorgen, weil wir eine reihe von Bef\u00FCrchtungen hatten. Wir versuchten zwar, im voraus licht ins dunkel zu bringen, indem wir die juristische Literatur studierten, um die Wahrheit ans helle licht zu bringen, aber die Lage war zu undurchschaubar. Es gelang uns jedoch nicht, daraus nutzen zu ziehen. Wir taten das alles nat\u00FCrlich auf eigene kosten, was uns auf die nerven ging, doch diese Praxis ist gang und gebe. Im Statt New York wird heute ohne fehl und Tadel gew\u00E4hlt; wir haben also die Qual der Wal. Ich kann freilich keinen groﬂen unterschied zwischen den Parteien erkennen. Das kann doch nicht seien! Wir werden das Vorhaben trotzdem in die tat umsetzen, bitte tut mir den gefallen. Diese gr\u00FCnde haben mich zu meiner Entscheidung bewogen. Meine raffinierte falle schnappte auf der Jagt zu. Unsere offensive begann um Mitternacht. Die feinde gingen in die falle. Die Formulierung ist insofern falsch, als dass hier ein 'dass' zu viel ist. Meines Erachtens nach ist der Text in russischer Sprach verfasst. Mach dir keine sorgen, ich bin zu hause. 
+guiDemoText = Dies ist ein Beispiel-Text, um zu zu zeigen, wie LanguageTool funktioniert. Wie man sieht, ist keine R\u00e4chtshreibpr\u00fcfung enthalten.
 guiLanguageManagerDialog=Language Module Manager
 
 guiMatchCount = M\u00f6gliche Fehler\:
@@ -149,7 +149,7 @@ guiSelectionCheckComplete = LanguageTool-Pr\u00fcfung des selektierten Textes is
 
 guiTagText = &Tag Text
 
-incorrect_case = Dieser Satz f\u00e4ngt nicht mit einem gro\u00df geschriebenen Wort an
+incorrect_case = Dieser Satz f\u00e4ngt nicht mit einem gro\u00dfgeschriebenen Wort an
 
 is = Isl\u00e4ndisch
 
@@ -210,4 +210,3 @@ whitespace_repetition = M\u00f6glicher Tippfehler\: mehr als ein Leerzeichen hin
 ro = Rum\u00e4nisch
 
 zh = Chinesisch
-
