--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_es.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_es.properties
@@ -41,13 +41,13 @@ desc_repetition = Repetici\u00f3n de una palabra (p. ej. 'soy soy')
 
 desc_repetition_short = Repetici\u00f3n de una palabra
 
-desc_repetition_beginning = 
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_repetition_beginning_word = 
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_repetition_beginning_adv = 
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_repetition_beginning_thesaurus = 
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
 desc_unpaired_brackets = Par\u00e9ntesis, comillas, signos de exclamaci\u00f3n, interrogaci\u00f3n y similares desparejados
 
@@ -93,7 +93,7 @@ guiCloseButton=Close
 
 guiConfigWindowTitle = LanguageTool - Opciones
 
-guiDemoText = Ese es un un ejemplo del texto que mostra como funcciona LanguageTool. Ese programma no incluieee ninguna revisi\u00f3n ortogr\u00e1fica\!
+guiDemoText = Ese es un un ejemplo del texto que mostra como funcciona LanguageTool. Ese programma no incluieee ninguna revisi\u00f3n ortogr\u00e1fica\\\!
 guiLanguageManagerDialog=Language Module Manager
 
 guiMatchCount = Posibles errores\:
