--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_is.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_is.properties
@@ -1,15 +1,15 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = 
+# atd = Automatically detect language
 
-ast = 
+# ast = Asturian
 
-be = 
+# be = Belarusian
 
-br = 
+# br = Breton
 
-ca = 
+# ca = Catalan
 
 category_case = H\u00e1stafur/l\u00e1gstafur
 
@@ -29,7 +29,7 @@ correctionMessage = Lei\u00f0r\u00e9tting\:
 
 cs = t\u00e9kkneska
 
-da = 
+# da = Danish
 
 de = \u00fe\u00fdska
 
@@ -41,13 +41,13 @@ desc_repetition = Endurteki\u00f0 or\u00f0 (t.d. 'mun mun')
 
 desc_repetition_short = Endurteki\u00f0 or\u00f0
 
-desc_repetition_beginning = 
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_repetition_beginning_word = 
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_repetition_beginning_adv = 
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_repetition_beginning_thesaurus = 
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
 desc_unpaired_brackets = Svigar, hornklofar e\u00f0a \u00f6nnur greinarmerki standast ekki \u00e1
 
@@ -83,13 +83,13 @@ false_friend_suggestion = \u00c1ttir\u00f0u vi\u00f0 {0}?
 
 fr = franska
 
-gl = 
+# gl = Galician
 
-guiAddButton=
+# guiAddButton=Add...
 guiCancelButton = H\u00e6tta vi\u00f0
 
 guiCheckComplete = LanguageTool yfirlestri er loki\u00f0.
-guiCloseButton=
+# guiCloseButton=Close
 
 guiConfigWindowTitle = LanguageTool valkostir
 
@@ -138,7 +138,7 @@ guiOOoOptionsButton = Valkostir...
 
 guiProgressWindowTitle = LanguageTool\: Les yfir texta...
 
-guiRemoveButton=
+# guiRemoveButton=Remove
 guiReplaceWindowTitle = Skipta \u00fat texta
 
 guiReplaceWithOtherText = <annar texti>
@@ -147,7 +147,7 @@ guiRunOnPort = Keyra \u00fej\u00f3n \u00e1 netg\u00e1tt nr.
 
 guiSelectionCheckComplete = LanguageTool hefur loki\u00f0 yfirlestri.
 
-guiTagText = 
+# guiTagText = &Tag Text
 
 incorrect_case = \u00deessi setning hefst ekki \u00e1 h\u00e1staf
 
@@ -183,7 +183,7 @@ resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
 ru = r\u00fassneska
 
-sk = 
+# sk = Slovak
 
 sl = sl\u00f3venska
 
@@ -193,7 +193,7 @@ startChecking = Hef yfirlestur\: {0}
 
 sv = s\u00e6nska
 
-tl = 
+# tl = Tagalog
 
 textLanguage = Tungum\u00e1l texta\:
 
@@ -207,7 +207,6 @@ unpaired_brackets = Svigar (e\u00f0a svipu\u00f0 t\u00e1kn) standast ekki \u00e1
 
 whitespace_repetition = Hugsanleg ritvilla\: endurteki\u00f0 bil
 
-ro = 
+# ro = Romanian
 
-zh = 
-
+# zh = Chinese
