--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_nl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_nl.properties
@@ -41,13 +41,13 @@ desc_repetition = Herhaling (bijv. 'de de')
 
 desc_repetition_short = Herhaling
 
-desc_repetition_beginning = 
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_repetition_beginning_word = 
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_repetition_beginning_adv = 
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_repetition_beginning_thesaurus = 
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
 desc_unpaired_brackets = Onjuist gecombineerde leestekens
 
