--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pl.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_pl.properties
@@ -41,13 +41,13 @@ desc_repetition = Powt\u00f3rzenie wyrazu (np. \u201ejest jest\u201d)
 
 desc_repetition_short = Powt\u00f3rzenie wyrazu
 
-desc_repetition_beginning = 
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_repetition_beginning_word = 
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_repetition_beginning_adv = 
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_repetition_beginning_thesaurus = 
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
 desc_unpaired_brackets = Niesparowane nawiasy i cudzys\u0142owy
 
@@ -210,4 +210,3 @@ whitespace_repetition = Prawdopodobna liter\u00f3wka\: wiele spacji z rz\u0119du
 ro = rumu\u0144ski
 
 zh = chi\u0144ski
-
