--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sk.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sk.properties
@@ -41,13 +41,13 @@ desc_repetition = Opakovanie slov (napr. 'bude bude')
 
 desc_repetition_short = Opakovanie slov
 
-desc_repetition_beginning = 
+desc_repetition_beginning = Postupn\u00e9 vety za\u010d\u00ednaj\u00face rovnak\u00fdm slovom
 
-desc_repetition_beginning_word = 
+desc_repetition_beginning_word = Tri vety za sebou za\u010d\u00ednaj\u00fa na rovnak\u00e9 slovo.
 
-desc_repetition_beginning_adv = 
+desc_repetition_beginning_adv = Dve vety za sebou za\u010d\u00ednaj\u00fa na rovnak\u00e9 slovo.
 
-desc_repetition_beginning_thesaurus = 
+desc_repetition_beginning_thesaurus = Preformulujte vetu alebo pou\u017eite synonymick\u00fd slovn\u00edk.
 
 desc_unpaired_brackets = Nesp\u00e1rovan\u00e9 z\u00e1tvorky, \u00favodzovky alebo podobn\u00e9 symboly
 
