--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sv.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_sv.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = 
+# atd = Automatically detect language
 
-ast = 
+# ast = Asturian
 
 be = Vitryska
 
-br = 
+# br = Breton
 
 ca = Katalanska
 
@@ -41,13 +41,13 @@ desc_repetition = Repetition av ord (exempelvis 'till till')
 
 desc_repetition_short = Repetition av ord
 
-desc_repetition_beginning = 
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_repetition_beginning_word = 
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_repetition_beginning_adv = 
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_repetition_beginning_thesaurus = 
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
 desc_unpaired_brackets = Icke ihopparade parenteser, citattecken eller liknande symboler
 
@@ -85,11 +85,11 @@ fr = Franska
 
 gl = Galiciska
 
-guiAddButton=
+# guiAddButton=Add...
 guiCancelButton = Avbryt
 
 guiCheckComplete = LanguageTool kontroll \u00e4r f\u00e4rdig.
-guiCloseButton=
+# guiCloseButton=Close
 
 guiConfigWindowTitle = LanguageTool Alternativ
 
@@ -138,7 +138,7 @@ guiOOoOptionsButton = Alternativ...
 
 guiProgressWindowTitle = LanguageTool\: Kontrollerar text...
 
-guiRemoveButton=
+# guiRemoveButton=Remove
 guiReplaceWindowTitle = Ers\u00e4tt text
 
 guiReplaceWithOtherText = <annan text>
@@ -147,7 +147,7 @@ guiRunOnPort = K\u00f6r server p\u00e5 po&rt
 
 guiSelectionCheckComplete = LanguageTool kontroll av markerad text \u00e4r utf\u00f6rd.
 
-guiTagText = 
+# guiTagText = &Tag Text
 
 incorrect_case = Denna mening b\u00f6rjar med liten bokstav
 
@@ -155,13 +155,13 @@ is = Isl\u00e4ndska
 
 it = Italienska
 
-km = 
+# km = Khmer
 
 lt = Litauiska
 
 missing_space_after_comma = L\u00e4gg till ett blanksteg efter kommatecknet
 
-ml = 
+# ml = Malayalam
 
 nl = Holl\u00e4ndska
 
@@ -209,5 +209,4 @@ whitespace_repetition = M\u00f6jlig felskrivning\: du har gjort upprepade mellan
 
 ro = Rom\u00e2n\u0103
 
-zh = 
-
+# zh = Chinese
