--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_br.properties
@@ -41,13 +41,13 @@ desc_repetition = Ger doublet (\u00ab\u00a0evit evit\u00a0\u00bb, \u00ab\u00a0me
 
 desc_repetition_short = Ger doublet
 
-desc_repetition_beginning = 
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_repetition_beginning_word = 
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_repetition_beginning_adv = 
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_repetition_beginning_thesaurus = 
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
 desc_unpaired_brackets = Mankout a ra ur grommell, ur c'hroched, pe un arouezenn damhe\u00f1vel
 
