--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ca.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = 
+# atd = Automatically detect language
 
-ast = 
+# ast = Asturian
 
 be = Bielor\u00fas
 
-br = 
+# br = Breton
 
 ca = Catal\u00e0
 
@@ -41,13 +41,13 @@ desc_repetition = Repetici\u00f3 de paraules (p.ex. 'ma ma')
 
 desc_repetition_short = Repetici\u00f3 de paraules
 
-desc_repetition_beginning = 
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_repetition_beginning_word = 
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_repetition_beginning_adv = 
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_repetition_beginning_thesaurus = 
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
 desc_unpaired_brackets = Claus, cometes, par\u00e8ntesi i simbols semblants desemparellats
 
@@ -67,7 +67,7 @@ enterText2 = Inseriu el text per comprovar ac\u00ed
 
 eo = Esperanto
 
-errorContext = 
+# errorContext = Context\:
 
 errorMessage = Missatge\:
 
@@ -85,11 +85,11 @@ fr = Franc\u00e8s
 
 gl = Gallec
 
-guiAddButton=
+# guiAddButton=Add...
 guiCancelButton = Cancel\u00b7la
 
 guiCheckComplete = La comprovaci\u00f3 de LanguageTool s'ha completat.
-guiCloseButton=
+# guiCloseButton=Close
 
 guiConfigWindowTitle = Opcions del LanguageTool
 
@@ -138,7 +138,7 @@ guiOOoOptionsButton = Opcions...
 
 guiProgressWindowTitle = LanguageTool\: Comprovant el text...
 
-guiRemoveButton=
+# guiRemoveButton=Remove
 guiReplaceWindowTitle = Substitueix el text
 
 guiReplaceWithOtherText = <un altre text>
@@ -147,7 +147,7 @@ guiRunOnPort = Executa com a servidor en el po&rt
 
 guiSelectionCheckComplete = La comprovaci\u00f3 del text seleccionat s'ha completat.
 
-guiTagText = 
+# guiTagText = &Tag Text
 
 incorrect_case = Aquesta frase no comen\u00e7a amb maj\u00fascula
 
@@ -155,7 +155,7 @@ is = Island\u00e8s
 
 it = Itali\u00e0
 
-km = 
+# km = Khmer
 
 lt = Litu\u00e0
 
@@ -193,7 +193,7 @@ startChecking = La comprovaci\u00f3 comen\u00e7ar\u00e0 en {0}
 
 sv = Suec
 
-tl = 
+# tl = Tagalog
 
 textLanguage = Llengua del text\:
 
@@ -209,5 +209,4 @@ whitespace_repetition = Possible error tipogr\u00e0fic\: heu repetit un espai en
 
 ro = Roman\u00e8s
 
-zh = 
-
+# zh = Chinese
