--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_km.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_km.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = 
+# atd = Automatically detect language
 
-ast = 
+# ast = Asturian
 
 be = \u1794\u17c1\u17a1\u17b6\u179a\u17bb\u179f\u17d2\u179f
 
-br = 
+# br = Breton
 
 ca = \u1780\u17b6\u178f\u17b6\u17a1\u17b6\u1793
 
@@ -41,33 +41,33 @@ desc_repetition = \u1798\u17b6\u1793\u200b\u200b\u179c\u17b6\u179a\u17c1\u178e\u
 
 desc_repetition_short = \u1798\u17b6\u1793\u200b\u200b\u179c\u17b6\u179a\u17c1\u178e\u179c\u17b6\u1780\u17d2\u1799\u200b\u1796\u17b6\u1780\u17d2\u1799
 
-desc_repetition_beginning = 
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_repetition_beginning_word = 
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_repetition_beginning_adv = 
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_repetition_beginning_thesaurus = 
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
 desc_unpaired_brackets = \u1798\u17b6\u1793\u200b\u179a\u17c9\u17b6\u178f\u17cb \u1783\u17d2\u1793\u17b6\u1794 \u17a2\u1796\u17d2\u1797\u1793\u17d2\u178f\u179a\u200b\u179f\u1789\u17d2\u1789\u17b6 \u17ac\u200b\u179f\u1789\u17d2\u1789\u17b6\u200b\u1798\u17bd\u1799\u200b\u178e\u17b6\u200b\u1795\u17d2\u179f\u17c1\u1784\u200b\u1791\u17c0\u178f\u200b\u178a\u17c2\u179b\u200b\u1797\u17d2\u179b\u17c1\u1785\u200b\u178a\u17b6\u1780\u17cb\u200b\u1782\u17bc
 
-desc_uppercase_sentence = 
+# desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
 
-desc_whitespacerepetition = 
+# desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
-double_dots_short = 
+# double_dots_short = Two consecutive dots
 
-double_commas_short = 
+# double_commas_short = Two consecutive comma
 
 en = \u17a2\u1784\u17cb\u1782\u17d2\u179b\u17c1\u179f
 
-enterText = 
+# enterText = Please type or paste text to check in the top area
 
-enterText2 = 
+# enterText2 = Please insert text to check here
 
 eo = \u17a2\u17c1\u179f\u17d2\u1796\u17c1\u179a\u17c9\u17b6\u1793\u17cb\u178f\u17bc
 
-errorContext = 
+# errorContext = Context\:
 
 errorMessage = \u179f\u17b6\u179a\u17d6
 
@@ -75,40 +75,40 @@ es = \u17a2\u17c1\u179f\u17d2\u1794\u17c9\u17b6\u1789
 
 false_friend = \u1796\u1796\u17bd\u1780\u200b\u1796\u17b6\u1780\u17d2\u1799\u200b\u178a\u17c2\u179b\u200b\u1798\u17b6\u1793\u200b\u1780\u17b6\u179a\u200b\u1794\u1793\u17d2\u179b\u17ba\u200b\u179f\u17c6\u17a1\u17c1\u1784\u200b\u178a\u17bc\u1785\u200b\u1782\u17d2\u1793\u17b6\u200b\u178f\u17c2\u200b\u1798\u17b6\u1793\u200b\u1793\u17d0\u1799\u200b\u1781\u17bb\u179f\u200b\u1782\u17d2\u1793\u17b6
 
-false_friend_desc = 
+# false_friend_desc = false friend hint for\:
 
-false_friend_hint = 
+# false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
 
-false_friend_suggestion = 
+# false_friend_suggestion = Did you mean {0}?
 
 fr = \u1794\u17b6\u179a\u17b6\u17c6\u1784
 
 gl = \u17a0\u17d2\u1780\u17b6\u179b\u17b8\u179f\u17ca\u17b8
 
-guiAddButton=
+# guiAddButton=Add...
 guiCancelButton = \u1794\u17c4\u17c7\u1794\u1784\u17cb
 
-guiCheckComplete = 
-guiCloseButton=
+# guiCheckComplete = LanguageTool check is complete.
+# guiCloseButton=Close
 
-guiConfigWindowTitle = 
+# guiConfigWindowTitle = LanguageTool Options
 
-guiDemoText = 
-guiLanguageManagerDialog=
+# guiDemoText = This is a example input to to show you how LanguageTool works. Note, however, that it does not include a spell checka.
+# guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount = 
+# guiMatchCount = Potential errors\:
 
-guiMenuAbout = 
+# guiMenuAbout = &About...
 
-guiMenuAddRules = 
+# guiMenuAddRules = Load &Rule File
 
-guiMenuCheckClipboard = 
+# guiMenuCheckClipboard = &Check Text in Clipboard
 
 guiMenuFile = &\u17af\u1780\u179f\u17b6\u179a
 
 guiMenuHelp = &\u1787\u17c6\u1793\u17bd\u1799
 
-guiMenuHide = 
+# guiMenuHide = &Hide to System Tray
 
 guiMenuOpen = &\u1794\u17be\u1780...
 
@@ -116,40 +116,40 @@ guiMenuOptions = \u1787\u1798\u17d2\u179a\u17be\u179f&\u1781\u17d2\u179b\u17c7\u
 
 guiMenuQuit = &\u1785\u17b6\u1780\u1785\u17c1\u1789
 
-guiMenuShowMainWindow = 
+# guiMenuShowMainWindow = Open Main Window
 
 guiMotherTongue = \u179f\u1780\u1797\u17b6\u179f\u17b6\u200b\u179a\u1794\u179f\u17cb\u200b\u17a2\u17d2\u1793\u1780\u17d6
 
-guiNoErrorsFound = 
+# guiNoErrorsFound = No errors or warnings found (language\: {0})
 
-guiNoErrorsFoundSelectedText = 
+# guiNoErrorsFoundSelectedText = No errors or warnings found in selected text (language\: {0})
 
-guiOKButton = 
+# guiOKButton = &OK
 
-guiOOoChangeButton = 
+# guiOOoChangeButton = &Change
 
-guiOOoCloseButton = 
+# guiOOoCloseButton = Close
 
-guiOOoIgnoreAllButton = 
+# guiOOoIgnoreAllButton = Ignore All
 
-guiOOoIgnoreButton = 
+# guiOOoIgnoreButton = Ignore
 
-guiOOoOptionsButton = 
+# guiOOoOptionsButton = Options...
 
-guiProgressWindowTitle = 
+# guiProgressWindowTitle = LanguageTool\: Checking Text...
 
-guiRemoveButton=
-guiReplaceWindowTitle = 
+# guiRemoveButton=Remove
+# guiReplaceWindowTitle = Replace text
 
-guiReplaceWithOtherText = 
+# guiReplaceWithOtherText = <other text>
 
-guiRunOnPort = 
+# guiRunOnPort = Run as server on po&rt
 
-guiSelectionCheckComplete = 
+# guiSelectionCheckComplete = LanguageTool check of selected text is complete.
 
-guiTagText = 
+# guiTagText = &Tag Text
 
-incorrect_case = 
+# incorrect_case = This sentence does not start with an uppercase letter
 
 is = \u17a2\u17ca\u17b8\u179f\u17d2\u179b\u1784\u17cb
 
@@ -159,27 +159,27 @@ km = \u1781\u17d2\u1798\u17c2\u179a
 
 lt = \u179b\u17b8\u1791\u17bb\u1799\u17a2\u17b6\u1793\u17b8
 
-missing_space_after_comma = 
+# missing_space_after_comma = Put a space after the comma
 
 ml = \u1798\u17c9\u17b6\u17a1\u17b6\u1799\u17c9\u17b6\u17a1\u17b6\u1798
 
 nl = \u17a0\u17bb\u179b\u17d2\u179b\u1784\u17cb
 
-no_space_after = 
+# no_space_after = Don't put a space after the opening parenthesis
 
-no_space_before = 
+# no_space_before = Don't put a space before the closing parenthesis
 
-no_space_before_dot = 
+# no_space_before_dot = Don't put a space before the full stop
 
 pl = \u1794\u17c9\u17bc\u17a1\u17bc\u1789
 
-repetition = 
+# repetition = Possible typo\: you repeated a word
 
-result1 = 
+# result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
-resultAreaText = 
+# resultAreaText = Results will appear here
 
-resultTime = 
+# resultTime = <br>Time\: {0}ms (including {1}ms for rule matching)<br>
 
 ru = \u179a\u17bb\u179f\u17d2\u179f\u17ca\u17b8
 
@@ -187,27 +187,26 @@ sk = \u179f\u17d2\u179b\u17bc\u179c\u17c9\u17b6\u1782\u17b8
 
 sl = \u179f\u17d2\u179b\u17bc\u179c\u17c9\u17b6\u1793\u17b8
 
-space_after_comma = 
+# space_after_comma = Put a space after the comma, but not before the comma
 
-startChecking = 
+# startChecking = Starting check in {0}
 
 sv = \u179f\u17ca\u17bb\u1799\u17a2\u17c2\u178a
 
-tl = 
+# tl = Tagalog
 
 textLanguage = \u1797\u17b6\u179f\u17b6\u200b\u179a\u1794\u179f\u17cb\u200b\u17a2\u178f\u17d2\u1790\u1794\u1791\u17d6
 
-two_commas = 
+# two_commas = Two consecutive commas
 
-two_dots = 
+# two_dots = Two consecutive dots
 
 uk = \u17a2\u17ca\u17bb\u1799\u1780\u17d2\u179a\u17c2\u1793
 
-unpaired_brackets = 
+# unpaired_brackets = Unpaired bracket or similar symbol
 
-whitespace_repetition = 
+# whitespace_repetition = Possible typo\: you repeated a whitespace
 
 ro = \u179a\u17bc\u1798\u17c9\u17b6\u1793\u17b8
 
-zh = 
-
+# zh = Chinese
