--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_lt.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_lt.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = 
+# atd = Automatically detect language
 
-ast = 
+# ast = Asturian
 
 be = Baltarusi\u0173
 
-br = 
+# br = Breton
 
 ca = Katalon\u0173
 
@@ -19,13 +19,13 @@ category_grammar = Gramatika
 
 category_misc = Kiti
 
-category_typo = 
+# category_typo = Possible Typo
 
 checkDone = Tikrinimas baigtas, rasta galim\u0173 klaid\u0173\: {0}
 
 checkText = Tikrinti tekst\u0105
 
-correctionMessage = 
+# correctionMessage = Correction\:
 
 cs = \u010dek\u0173
 
@@ -39,25 +39,25 @@ desc_double_punct = Ar n\u0117ra dviej\u0173 pasikartojan\u010di\u0173 ta\u0161k
 
 desc_repetition = Pasikartojantys \u017eod\u017eiai (pvz. "ar ar")
 
-desc_repetition_short = 
+# desc_repetition_short = Word repetition
 
-desc_repetition_beginning = 
+# desc_repetition_beginning = Successive sentences beginning with the same word
 
-desc_repetition_beginning_word = 
+# desc_repetition_beginning_word = Three successive sentences begin with the same word.
 
-desc_repetition_beginning_adv = 
+# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
 
-desc_repetition_beginning_thesaurus = 
+# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
 
-desc_unpaired_brackets = 
+# desc_unpaired_brackets = Unpaired braces, brackets, quotation marks and similar symbols
 
 desc_uppercase_sentence = Tikrinti ar sakinys prasideda i\u0161 did\u017eiosios raid\u0117s
 
-desc_whitespacerepetition = 
+# desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
-double_dots_short = 
+# double_dots_short = Two consecutive dots
 
-double_commas_short = 
+# double_commas_short = Two consecutive comma
 
 en = angl\u0173
 
@@ -73,34 +73,34 @@ errorMessage = Klaida\:
 
 es = ispan\u0173
 
-false_friend = 
+# false_friend = False friend
 
 false_friend_desc = netikras draugas\:
 
-false_friend_hint = 
+# false_friend_hint = Hint\: "{0}" ({1}) means {2} ({3}).
 
-false_friend_suggestion = 
+# false_friend_suggestion = Did you mean {0}?
 
 fr = pranc\u016bz\u0173
 
-gl = 
+# gl = Galician
 
-guiAddButton=
+# guiAddButton=Add...
 guiCancelButton = At\u0161aukti
 
 guiCheckComplete = Gramatikos tikrinimas baigtas.
-guiCloseButton=
+# guiCloseButton=Close
 
 guiConfigWindowTitle = Gramatikos \u012frankio nustatymai
 
 guiDemoText = \u010dia yra pavyzdinis tekstas gramatikos tikrinimui tikrinimui. Atsiminkite , kad \u017eod\u017ei\u0173 ra\u0161yba netikrynama.
-guiLanguageManagerDialog=
+# guiLanguageManagerDialog=Language Module Manager
 
 guiMatchCount = Rasta galim\u0173 klaid\u0173\:
 
 guiMenuAbout = Apie...
 
-guiMenuAddRules = 
+# guiMenuAddRules = Load &Rule File
 
 guiMenuCheckClipboard = Tikrinti nukopijuot\u0105 tekst\u0105 i\u0161karpin\u0117je
 
@@ -116,7 +116,7 @@ guiMenuOptions = Nustatymai...
 
 guiMenuQuit = I\u0161eiti
 
-guiMenuShowMainWindow = 
+# guiMenuShowMainWindow = Open Main Window
 
 guiMotherTongue = Gimtoji kalba\:
 
@@ -138,7 +138,7 @@ guiOOoOptionsButton = Nustatymai...
 
 guiProgressWindowTitle = Gramatika\: Tikrinamas tekstas...
 
-guiRemoveButton=
+# guiRemoveButton=Remove
 guiReplaceWindowTitle = Pakeisti tekst\u0105
 
 guiReplaceWithOtherText = <kitas tekstas>
@@ -147,7 +147,7 @@ guiRunOnPort = Paleisti tikrinimo server\u012f, prievadas\:
 
 guiSelectionCheckComplete = Pa\u017eym\u0117to teksto gramatikos tikrinimas baigtas.
 
-guiTagText = 
+# guiTagText = &Tag Text
 
 incorrect_case = Sakinys turi prasid\u0117ti i\u0161 did\u017eiosios raid\u0117s
 
@@ -155,7 +155,7 @@ is = island\u0173
 
 it = ital\u0173
 
-km = 
+# km = Khmer
 
 lt = lietuvi\u0173
 
@@ -169,13 +169,13 @@ no_space_after = Nereikia d\u0117ti tarpo po atidaran\u010dio skliaustelio
 
 no_space_before = Nereikia d\u0117ti tarpo prie\u0161 u\u017edarant\u012f skliaustel\u012f
 
-no_space_before_dot = 
+# no_space_before_dot = Don't put a space before the full stop
 
 pl = lenk\u0173
 
-repetition = 
+# repetition = Possible typo\: you repeated a word
 
-result1 = 
+# result1 = <br><b> {0}. Line {1}, column {2}</b><br>
 
 resultAreaText = Rezultatai bus pateikti \u010dia
 
@@ -185,7 +185,7 @@ ru = rus\u0173
 
 sk = slovak\u0173
 
-sl = 
+# sl = Slovenian
 
 space_after_comma = Tarp\u0105 reikia d\u0117ti po kablelio, o ne prie\u0161 j\u012f
 
@@ -193,7 +193,7 @@ startChecking = Pradedamas tikrinimas kalbai\: {0}
 
 sv = \u0161ved\u0173
 
-tl = 
+# tl = Tagalog
 
 textLanguage = Teksto kalba\:
 
@@ -205,9 +205,8 @@ uk = ukrainie\u010di\u0173
 
 unpaired_brackets = Unpaired bracket or similar symbol
 
-whitespace_repetition = 
+# whitespace_repetition = Possible typo\: you repeated a whitespace
 
 ro = Rom\u00e2n\u0103
 
-zh = 
-
+# zh = Chinese
