--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ro.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_ro.properties
@@ -1,13 +1,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd = 
+atd = Detectare automat\u0103 a limbii
 
-ast = 
+ast = Asturian\u0103
 
 be = Bielorus\u0103
 
-br = 
+br = Breton\u0103
 
 ca = Catalan\u0103
 
@@ -41,13 +41,13 @@ desc_repetition = Cuv\u00e2nt repetat (ex\: \u201evoi voi\u201d)
 
 desc_repetition_short = Cuv\u00e2nt repetat
 
-desc_repetition_beginning = 
+desc_repetition_beginning = Propozi\u021bii succesive \u00eencep cu acela\u0219i cuv\u00e2nt.
 
-desc_repetition_beginning_word = 
+desc_repetition_beginning_word = Trei propozi\u021bii succesive \u00eencep cu acela\u0219i cuv\u00e2nt.
 
-desc_repetition_beginning_adv = 
+desc_repetition_beginning_adv = Dou\u0103 propozi\u021bii succesive \u00eencep cu acela\u0219i adverb.
 
-desc_repetition_beginning_thesaurus = 
+desc_repetition_beginning_thesaurus = Reformula\u021bi sau folosi\u021bi un tezaur pentru a g\u0103si un sinonim.
 
 desc_unpaired_brackets = Acolade, paranteze, ghilimele sau alte simboluri similare desperecheate
 
@@ -67,7 +67,7 @@ enterText2 = V\u0103 rug\u0103m s\u0103 insera\u021bi textul de verificat aici
 
 eo = Esperanto
 
-errorContext = 
+errorContext = Context\:
 
 errorMessage = Mesaj\:
 
@@ -85,11 +85,11 @@ fr = Francez\u0103
 
 gl = Galician\u0103
 
-guiAddButton=
+guiAddButton=Adau
 guiCancelButton = Renun\u021b\u0103
 
 guiCheckComplete = Verificarea f\u0103cut\u0103 de LanguageTool este complet\u0103.
-guiCloseButton=
+guiCloseButton=\u00cenchide
 
 guiConfigWindowTitle = Op\u021biuni pentru LanguageTool
 
@@ -124,7 +124,7 @@ guiNoErrorsFound = Nu s-au g\u0103sit erori sau avertismente (limba {0})
 
 guiNoErrorsFoundSelectedText = Nu s-au g\u0103sit erori sau avertismente \u00een textul selectat (limba {0})
 
-guiOKButton = 
+guiOKButton = &Bine
 
 guiOOoChangeButton = S&chimb\u0103
 
@@ -138,7 +138,7 @@ guiOOoOptionsButton = Op\u021biuni...
 
 guiProgressWindowTitle = LanguageTool\: Se verific\u0103 textul...
 
-guiRemoveButton=
+guiRemoveButton=\u0218terge
 guiReplaceWindowTitle = \u00eenlocuire text
 
 guiReplaceWithOtherText = <alt text>
@@ -147,7 +147,7 @@ guiRunOnPort = Ruleaz\u0103 ca server pe po&rtul
 
 guiSelectionCheckComplete = Verificarea LanguageTool a textului selectat este complet\u0103.
 
-guiTagText = 
+guiTagText = Etichetare &text
 
 incorrect_case = Propozi\u021bia nu \u00eencepe cu liter\u0103 mare
 
@@ -155,7 +155,7 @@ is = Islandez\u0103
 
 it = Italian\u0103
 
-km = 
+km = Khmer
 
 lt = Lituanian\u0103
 
@@ -193,7 +193,7 @@ startChecking = Verificarea \u00eencepe \u00een {0}
 
 sv = Suedez\u0103
 
-tl = 
+tl = Tagalog
 
 textLanguage = Limba textului\:
 
@@ -201,7 +201,7 @@ two_commas = Dou\u0103 virgule consecutive
 
 two_dots = Dou\u0103 puncte consecutive
 
-uk = 
+uk = Ucrainean\u0103
 
 unpaired_brackets = Parantez\u0103 nepereche
 
@@ -209,5 +209,4 @@ whitespace_repetition = Posibi\u0103 gre\u0219eal\u0103\: a\u021bi repetat un sp
 
 ro = Rom\u00e2n\u0103
 
-zh = 
-
+zh = Chinez\u0103
