adapted to a change in Unicode handling in Java 7 that broke support for Khmer - fixes KhmerWordRepeatRuleTest with Java 7

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -48,6 +48,7 @@ LanguageTool Change Log
   non-localhost had been denied before by default, this should be more secure.
 
  -Internal changes:
+   - adapted to a change in Unicode handling in Java 7 that broke support for Khmer
    - added sanity check to detect duplicate exceptions in grammar rules.
    - added sanity check to detect exceptions with scope="next" yet
      without skip="..." in grammar rules.
