[br] - added a note to indicate which Breton dictionary is used.      - removed note about web page created (I don't think it        should be in the release notes of LT-1.7)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -5,10 +5,10 @@ LanguageTool Change Log
  -English
    -a few new rules
  -Breton
+   -updated dictionary to use Apertium svn r36822
    -several new rules
  -Esperanto:
    -several new rules
-   -web page http://www.languagetool.org/eo/ translated in Esperanto 
  -French:
    -updated dictionary to use Dicollecte-4.4.1
    -several new rules
