- added note in CHANGES.txt about ellipsis not being considered as   token separator.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -37,6 +37,9 @@ LanguageTool Change Log
 
  -consecutive tab characters are not considered an error anymore
 
+ -Ellipsis … is no longer considered as a sentence separator (only relevant
+  for languages not yet using SRX tokenizer).
+
  -new optional rule element "url" (optional): an URL to a page that explains
   the rule leading to the error in more detail. Not used yet.
 
