update i18n data from Transifex

--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_da.properties
@@ -41,13 +41,13 @@ desc_repetition = Ordgentagelse (f.eks. 'den den')
 
 desc_repetition_short = Ordgentagelse
 
-# desc_repetition_beginning = Successive sentences beginning with the same word
+desc_repetition_beginning = P\u00e5 hinanden f\u00f8lgende s\u00e6tninger der starter med samme ord.
 
-# desc_repetition_beginning_word = Three successive sentences begin with the same word.
+desc_repetition_beginning_word = Tre p\u00e5 hinanden f\u00f8lgende s\u00e6tninger der starter med samme ord.
 
-# desc_repetition_beginning_adv = Two successive sentences begin with the same adverb.
+desc_repetition_beginning_adv = To p\u00e5 hinanden f\u00f8lgende s\u00e6tninger der starter med samme adverbium.
 
-# desc_repetition_beginning_thesaurus = Reword the sentence or use a thesaurus to find a synonym.
+desc_repetition_beginning_thesaurus = Fjern s\u00e6tningen eller brug en tesaurus til finde et synonym.
 
 desc_unpaired_brackets = Ikke parret parenteser, tuborgklammer, citationstegn og lignende symboler
 
