--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_de.properties
@@ -35,7 +35,7 @@ de = Deutsch
 
 desc_comma_whitespace = Leerzeichen vor/hinter Kommas und Klammern
 
-desc_double_punct = Zwei aufeinander folgende Kommas oder Punkte
+desc_double_punct = Zwei aufeinanderfolgende Kommas oder Punkte
 
 desc_repetition = Wortwiederholung (z.B. 'als als')
 
@@ -55,9 +55,9 @@ desc_uppercase_sentence = Gro\u00dfschreibung am Satzanfang
 
 desc_whitespacerepetition = Wiederholung von Leerzeichen
 
-double_dots_short = Zwei aufeinander folgende Punkte
+double_dots_short = Zwei aufeinanderfolgende Punkte
 
-double_commas_short = Zwei aufeinander folgende Kommas
+double_commas_short = Zwei aufeinanderfolgende Kommas
 
 en = Englisch
 
@@ -167,7 +167,7 @@ nl = Niederl\u00e4ndisch
 
 no_space_after = Hinter einer \u00f6ffnenden Klammer wird kein Leerzeichen eingef\u00fcgt.
 
-no_space_before = Vor einer schlie\u00dfeden Klammer wird kein Leerzeichen eingef\u00fcgt.
+no_space_before = Vor einer schlie\u00dfenden Klammer wird kein Leerzeichen eingef\u00fcgt.
 
 no_space_before_dot = Vor dem Punkt sollte kein Leerzeichen stehen
 
