[ca] major update, including many new rules and new tokenization (Jaume Ortolà i Font)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,7 +2,8 @@ LanguageTool Change Log
 
 1.8-dev (release planned for around 2012-06-30)
 
- -...
+ -Catalan
+   -major update, including many new rules and new tokenization (Jaume Ortolà i Font)
 
 
 1.7 (2012-03-25)
