GUI: made the result of "Tag Text" more readable

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -5,6 +5,8 @@ LanguageTool Change Log
  -Catalan
    -major update, including many new rules and new tokenization (Jaume Ortolà i Font)
 
+ -GUI: made the result of "Tag Text" more readable
+
 
 1.7 (2012-03-25)
 
