--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -5,6 +5,9 @@ LanguageTool Change Log
  -Catalan
    -major update, including many new rules and new tokenization (Jaume Ortolà i Font)
 
+ -Russian:
+   -fixed a few false alarms
+
  -GUI: made the result of "Tag Text" more readable
 
 
