Improved startup speed by using Sax parser and new segment library (Jarek Lipski)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -10,6 +10,8 @@ LanguageTool Change Log
 
  -GUI: made the result of "Tag Text" more readable
 
+ -Improved startup speed (Jarek Lipski)
+
 
 1.7 (2012-03-25)
 
