mention that there are many new German rules

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,7 +2,10 @@ LanguageTool Change Log
 
 1.8-dev (release planned for around 2012-06-30)
 
- -Catalan
+ -German:
+   -many new rules and rule updates
+
+ -Catalan:
    -major update, including many new rules and new tokenization (Jaume Ortolà i Font)
 
  -Russian:
@@ -15,7 +18,7 @@ LanguageTool Change Log
 
 1.7 (2012-03-25)
 
- -English
+ -English:
    -a few new rules
  -Breton
    -updated dictionary to use Apertium svn r36822
