if a LanguageTool rule has an URL with more information, the grammar checking dialog in LibreOffice will now offer a "More..." link to that URL

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -11,6 +11,10 @@ LanguageTool Change Log
  -Russian:
    -fixed a few false alarms
 
+ -LibreOffice: if a LanguageTool rule has an URL with more information, the
+  grammar checking dialog in LibreOffice will now offer a "More..." link
+  to that URL
+
  -GUI: made the result of "Tag Text" more readable
 
  -Improved startup speed (Jarek Lipski)
