[ru] add optional url element to some rules

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -10,6 +10,7 @@ LanguageTool Change Log
 
  -Russian:
    -fixed a few false alarms
+   -add URL element for some rules with URL with more information about this rule
 
  -LibreOffice: if a LanguageTool rule has an URL with more information, the
   grammar checking dialog in LibreOffice will now offer a "More..." link
