[it] several new rules, thanks to Riccardo Murri and Agnese Dal Borgo

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -12,6 +12,9 @@ LanguageTool Change Log
    -fixed a few false alarms
    -add URL element for some rules with URL with more information about this rule
 
+ -Italian:
+   -several new rules (Riccardo Murri and Agnese Dal Borgo)
+
  -LibreOffice: if a LanguageTool rule has an URL with more information, the
   grammar checking dialog in LibreOffice will now offer a "More..." link
   to that URL
