Overlapping rule matches are filtered now so that only the first match per <rulegroup> is kept

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -23,6 +23,8 @@ LanguageTool Change Log
 
  -Improved startup speed (Jarek Lipski)
 
+ -Overlapping rule matches are filtered now so that only the first match per <rulegroup> is kept
+
 
 1.7 (2012-03-25)
 
