--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -5,6 +5,11 @@ LanguageTool Change Log
  -German:
    -many new rules and rule updates
 
+ -English:
+   -although a matter of debate, "an historic", "an historical", and "an habitual"
+    is not considered incorrect anymore,
+    also see http://www.merriam-webster.com/dictionary/a%5B2%5D
+
  -Catalan:
    -major update, including many new rules and new tokenization (Jaume Ortolà i Font)
 
