--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -24,6 +24,9 @@ LanguageTool Change Log
   grammar checking dialog in LibreOffice will now offer a "More..." link
   to that URL
 
+ -The XML format for rules has been changed to use <marker>...</marker> tags instead
+  of mark_from and mark_to attributes
+
  -GUI: made the result of "Tag Text" more readable
 
  -Improved startup speed (Jarek Lipski)
