--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -26,6 +26,8 @@ LanguageTool Change Log
 
  -LibreOffice / OpenOffice integration: SingletonFactory now implements
   XServiceInfo (Stephan Bergmann) - Sourceforge bug #3526635
+  
+ -LanguageTool supports now spell-checking via hunspell.
 
  -The XML format for rules has been changed to use <marker>...</marker> tags instead
   of mark_from and mark_to attributes
