[fr] upgraded French dictionary from Dicollecte-4.4.1 to Dicollect-4.5

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -20,6 +20,13 @@ LanguageTool Change Log
  -Italian:
    -several new rules (Riccardo Murri and Agnese Dal Borgo)
 
+ -French:
+   -updated dictionary to use Dicollecte-4.5
+   -several new rules and fixed false alarms
+
+ -Breton
+   -several new rules and fixed false alarms
+
  -LibreOffice: if a LanguageTool rule has an URL with more information, the
   grammar checking dialog in LibreOffice will now offer a "More..." link
   to that URL
@@ -949,7 +956,7 @@ LanguageTool Change Log
   of rules can be disabled by default by specifying 
   default="off". Java rules can be set as turned off by
   default by using setDefaultOff() method.
-  Both settings can be overriden in the Options dialog
+  Both settings can be overridden in the Options dialog
   box.
 
  -Added possibility to set hot keys for UI items in 
