more verbose info about two builds

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -34,7 +34,9 @@ LanguageTool Change Log
  -LibreOffice / OpenOffice integration: SingletonFactory now implements
   XServiceInfo (Stephan Bergmann) - Sourceforge bug #3526635
   
- -LanguageTool supports now spell-checking via hunspell.
+ -LanguageTool in the standalone version supports now spell-checking via hunspell.
+  There are two distribution files: a .zip file for standalone use, 
+  and an .oxt extension for LibreOffice/ApacheOpenOffice.
 
  -The XML format for rules has been changed to use <marker>...</marker> tags instead
   of mark_from and mark_to attributes
