--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
@@ -55,6 +55,10 @@ desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
 
 desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
+desc_spelling = Possible spelling mistake
+
+desc_spelling_short = Spelling mistake
+
 double_dots_short = Two consecutive dots
 
 double_commas_short = Two consecutive comma
@@ -188,6 +192,8 @@ sk = Slovak
 sl = Slovenian
 
 space_after_comma = Put a space after the comma, but not before the comma
+
+spelling = Possible spelling mistake found
 
 startChecking = Starting check in {0}
 
