--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
@@ -47,6 +47,10 @@ desc_uppercase_sentence = Checks that a sentence starts with an uppercase letter
 
 desc_whitespacerepetition = Whitespace repetition (bad formatting)
 
+desc_spelling = Possible spelling mistake
+
+desc_spelling_short = Spelling mistake
+
 double_dots_short = Two consecutive dots
 
 double_commas_short = Two consecutive comma
@@ -174,6 +178,8 @@ resultAreaText = Results will appear here
 resultTime = <br>Time: {0}ms (including {1}ms for rule matching)<br>
 
 ru = Russian
+
+spelling = Possible spelling mistake found.
 
 sk = Slovak
 
