[ru] Add Russian hunspell dictionary

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -16,6 +16,7 @@ LanguageTool Change Log
  -Russian:
    -fixed a few false alarms
    -add URL element for some rules with URL with more information about this rule
+   -add spellcheck dictionary for standalone version. 
 
  -Italian:
    -several new rules (Riccardo Murri and Agnese Dal Borgo)
