use GUI configuration settings for the HTTP Server started from the GUI

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -15,8 +15,8 @@ LanguageTool Change Log
 
  -Russian:
    -fixed a few false alarms
-   -add URL element for some rules with URL with more information about this rule
-   -add spellcheck dictionary for standalone version. 
+   -added URL element for some rules with URL with more information about this rule
+   -added spellcheck dictionary for standalone version. 
 
  -Italian:
    -several new rules (Riccardo Murri and Agnese Dal Borgo)
@@ -27,6 +27,9 @@ LanguageTool Change Log
 
  -Breton
    -several new rules and fixed false alarms
+   
+ -Polish
+   -added spelling check dictionary for the standalone version
 
  -LibreOffice: if a LanguageTool rule has an URL with more information, the
   grammar checking dialog in LibreOffice will now offer a "More..." link
@@ -38,6 +41,10 @@ LanguageTool Change Log
  -LanguageTool in the standalone version supports now spell-checking via hunspell.
   There are two distribution files: a .zip file for standalone use, 
   and an .oxt extension for LibreOffice/ApacheOpenOffice.
+  
+ -If you start the HTTP Server from the GUI, it now reads the configuration files 
+  that are configured in the GUI (if the appropriate checkbox is set). 
+  This way the user can control the behavior of the server easily. 
 
  -The XML format for rules has been changed to use <marker>...</marker> tags instead
   of mark_from and mark_to attributes
