--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
@@ -211,6 +211,8 @@ uk = Ukrainian
 
 unpaired_brackets = Unpaired bracket or similar symbol
 
+useGUIConfig = Use above settings for the server
+
 whitespace_repetition = Possible typo: you repeated a whitespace
 
 ro = Romanian
