--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -44,7 +44,10 @@ LanguageTool Change Log
   
  -If you start the HTTP Server from the GUI, it now reads the configuration files 
   that are configured in the GUI (if the appropriate checkbox is set). 
-  This way the user can control the behavior of the server easily. 
+  This way the user can control the behavior of the server easily.
+  
+ -Two new options for the HTTP Server added: "disabled" and "enabled", which is used 
+  to disable or enable rules in the same way as on the command-line. 
 
  -The XML format for rules has been changed to use <marker>...</marker> tags instead
   of mark_from and mark_to attributes
