initial support for Greek, by Panagiotis Minos

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,6 +2,9 @@ LanguageTool Change Log
 
 1.8-dev (release planned for around 2012-06-30)
 
+ -Greek:
+   -initial support for Greek with few rules for now (Panagiotis Minos)
+
  -German:
    -many new rules and rule updates
 
