--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle_en.properties
@@ -55,6 +55,8 @@ double_dots_short = Two consecutive dots
 
 double_commas_short = Two consecutive comma
 
+el = Greek
+
 en = English
 
 enterText = Please type or paste text to check in the top area
