--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -60,6 +60,9 @@ LanguageTool Change Log
  -Improved startup speed (Jarek Lipski)
 
  -Overlapping rule matches are filtered now so that only the first match per <rulegroup> is kept
+ 
+ -In the profiling rules' mode on the command-line, you can now enable 
+  and disable rules. 
 
 
 1.7 (2012-03-25)
