[eo] started to add links using <url>...</url> (more to come)      to the Esperanto grammar PMEG (Plena Manlibro de Esperanta      Gramatiko) with permission of its author Bertilo Wennergren.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -34,6 +34,12 @@ LanguageTool Change Log
  -Polish
    -added spelling check dictionary for the standalone version
 
+ -Esperanto
+   -fixed false alarms
+   -added <url> for further information about errors with links
+    to PMEG (Plena Manlibro de Esperanto) with permission of its
+    author Bertilo Wennergren.
+
  -LibreOffice: if a LanguageTool rule has an URL with more information, the
   grammar checking dialog in LibreOffice will now offer a "More..." link
   to that URL. This makes possible to have external documentation about rules.
