[eo] added more <url> links to grammatical explanations      in PMEG (Plena Manlibreo de Esperanto) and also      links to grammatical explanations in http://www.lernu.net      (with permissions of authors)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -36,9 +36,10 @@ LanguageTool Change Log
 
  -Esperanto
    -fixed false alarms
-   -added <url> for further information about errors with links
-    to PMEG (Plena Manlibro de Esperanto) with permission of its
-    author Bertilo Wennergren.
+   -added <url> for further information about errors with links to
+    PMEG (Plena Manlibro de Esperanto) with permission of its
+    author Bertilo Wennergren, and to Lernu.net also with
+    permission of the lernu team.
 
  -LibreOffice: if a LanguageTool rule has an URL with more information, the
   grammar checking dialog in LibreOffice will now offer a "More..." link
