--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -41,9 +41,11 @@ LanguageTool Change Log
     author Bertilo Wennergren, and to Lernu.net also with
     permission of the lernu team.
 
- -LibreOffice: if a LanguageTool rule has an URL with more information, the
+ -If a LanguageTool rule has an URL with more information, the
   grammar checking dialog in LibreOffice will now offer a "More..." link
-  to that URL. This makes possible to have external documentation about rules.
+  to that URL in LibreOffice, as well as on the command line as "More info:", 
+  and as "url" attribute of the <error> element in the XML API format. 
+  This makes possible to have external documentation about rules.
 
  -LibreOffice / OpenOffice integration: SingletonFactory now implements
   XServiceInfo (Stephan Bergmann) - Sourceforge bug #3526635
@@ -69,7 +71,7 @@ LanguageTool Change Log
  -Overlapping rule matches are filtered now so that only the first match per <rulegroup> is kept
  
  -In the profiling rules' mode on the command-line, you can now enable 
-  and disable rules. 
+  and disable rules.  
 
 
 1.7 (2012-03-25)
