Add country variants for British and American English. Note: the impact for the LibreOffice extension has not been checked yet.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -50,6 +50,10 @@ LanguageTool Change Log
  -LibreOffice / OpenOffice integration: SingletonFactory now implements
   XServiceInfo (Stephan Bergmann) - Sourceforge bug #3526635
   
+ -LanguageTool supports now separate rules for different local variants of a language,
+  for example American English and British English. To use them from the command line, 
+  simply use "en-US" or "en-GB" as the language code. 
+  
  -LanguageTool in the standalone version supports now spell-checking via hunspell.
   There are two distribution files: a .zip file for standalone use, 
   and an .oxt extension for LibreOffice/ApacheOpenOffice.
