--- a/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
+++ b/trunk/JLanguageTool/src/java/org/languagetool/MessagesBundle.properties
@@ -67,6 +67,10 @@ el = Greek
 
 en = English
 
+en-GB = British English
+
+en-US = American English
+
 enterText = Please type or paste text to check in the top area
 
 enterText2 = Please insert text to check here
