use rule URL with more information in the GUI

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -43,9 +43,10 @@ LanguageTool Change Log
 
  -If a LanguageTool rule has an URL with more information, the
   grammar checking dialog in LibreOffice will now offer a "More..." link
-  to that URL in LibreOffice, as well as on the command line as "More info:", 
-  and as "url" attribute of the <error> element in the XML API format. 
-  This makes possible to have external documentation about rules.
+  to that URL in LibreOffice, as well as on the command line and
+  user interface as "More info:", and as "url" attribute of the <error>
+  element in the XML API format. This makes possible to have external
+  documentation about rules.
 
  -LibreOffice / OpenOffice integration: SingletonFactory now implements
   XServiceInfo (Stephan Bergmann) - Sourceforge bug #3526635
