fix most problems with article_missing

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -12,6 +12,8 @@ LanguageTool Change Log
    -although a matter of debate, "an historic", "an historical", and "an habitual"
     is not considered incorrect anymore,
     also see http://www.merriam-webster.com/dictionary/a%5B2%5D
+   -fixes in the tagger dictionary and disambiguation rules to reduce false alarms
+   -added British and American English spelling dictionaries
 
  -Catalan:
    -major update, including many new rules and new tokenization (Jaume Ortolà i Font)
@@ -39,7 +41,7 @@ LanguageTool Change Log
    -added <url> for further information about errors with links to
     PMEG (Plena Manlibro de Esperanto) with permission of its
     author Bertilo Wennergren, and to Lernu.net also with
-    permission of the lernu team.
+    permission of the lernu team.    
 
  -If a LanguageTool rule has an URL with more information, the
   grammar checking dialog in LibreOffice will now offer a "More..." link
