enable per-language configuration

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -65,6 +65,10 @@ LanguageTool Change Log
   that are configured in the GUI (if the appropriate checkbox is set). 
   This way the user can control the behavior of the server easily.
   
+ -The configuration file now stores settings individually for all languages. This means
+  that you can enable spellcheck for American English, disable it for Polish, and British 
+  English, and all this settings will be saved separately.
+  
  -Two new options for the HTTP Server added: "disabled" and "enabled", which is used 
   to disable or enable rules in the same way as on the command-line. 
 
