And now country-variant rules, introducing simplistic rules for British English (actually, simplereplacerule is easier but this is a proof-of-concept)

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -14,6 +14,7 @@ LanguageTool Change Log
     also see http://www.merriam-webster.com/dictionary/a%5B2%5D
    -fixes in the tagger dictionary and disambiguation rules to reduce false alarms
    -added British and American English spelling dictionaries
+   -added some rules to detect typical American expressions in British English 
 
  -Catalan:
    -major update, including many new rules and new tokenization (Jaume Ortolà i Font)
