add sf.net suggestion #

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -56,7 +56,8 @@ LanguageTool Change Log
   
  -LanguageTool supports now separate rules for different local variants of a language,
   for example American English and British English. To use them from the command line, 
-  simply use "en-US" or "en-GB" as the language code. 
+  simply use "en-US" or "en-GB" as the language code. This implements sf.net feature
+  suggestion #3287388.
   
  -LanguageTool in the standalone version supports now spell-checking via hunspell.
   There are two distribution files: a .zip file for standalone use, 
