--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -84,7 +84,9 @@ LanguageTool Change Log
  -Overlapping rule matches are filtered now so that only the first match per <rulegroup> is kept
  
  -In the profiling rules' mode on the command-line, you can now enable 
-  and disable rules.  
+  and disable rules.
+  
+ -Some internal bug fixing in disambiguation and pattern rules.  
 
 
 1.7 (2012-03-25)
