[ca] new synthesizer by Jaume Ortolà i Font

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -18,6 +18,8 @@ LanguageTool Change Log
 
  -Catalan:
    -major update, including many new rules and new tokenization (Jaume Ortolà i Font)
+   -new synthesizer (given a part-of-speech, this generates the inflected word
+   forms) (Jaume Ortolà i Font)
 
  -Russian:
    -fixed a few false alarms
